--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require-dev": {
+        "psr/http-message": "*",
         "phpunit/phpunit": "4.2.*"
     },
     "minimum-stability":"dev",
