--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "autoload" : {
         "classmap": ["src/"],
         "psr-4": {
-            "samsonframework\\": "src/"
+            "samsonframework\\psr": "src/"
         }
     },
     "config":{
