--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,37 @@
 {
-	"name":"samsonframework/psr",
+    "name": "samsonframework/psr",
     "description": "SamsonFramework PHPFIG interfaces",
-    "keywords": ["SamsonFramework", "PHPFIG", "interfaces"],
-    "authors":[
+    "keywords": [
+        "SamsonFramework",
+        "PHPFIG",
+        "interfaces"
+    ],
+    "authors": [
         {
-            "name":"Vitaly Iegorov",
-            "email":"egorov@samsonos.com"
+            "name": "Vitaly Iegorov",
+            "email": "egorov@samsonos.com"
         }
     ],
-    "require-dev": {
-        "psr/http-message": "*",
-        "phpunit/phpunit": "4.2.*"
+    "require": {
+        "psr/http-message": "*"
     },
-    "minimum-stability":"dev",
-	"license":"Open Software License (OSL) v 3.0",
-	"homepage":"http://samsonos.com/",
-    "autoload" : {
-        "classmap": ["src/"],
+    "require-dev": {
+        "phpunit/phpunit": "5.*"
+    },
+    "license": "Open Software License (OSL) v 3.0",
+    "homepage": "http://samsonos.com/",
+    "autoload": {
         "psr-4": {
             "samsonframework\\psr\\": "src/"
         }
     },
-    "config":{
-    "github-protocols":["https"]
-  },
-  "extra": { 
-    "samsonphp_package_compressable": "1", 
-    "samson_module_include": "1"
-  }
+    "config": {
+        "github-protocols": [
+            "https"
+        ]
+    },
+    "extra": {
+        "samsonphp_package_compressable": "1",
+        "samson_module_include": "1"
+    }
 }
