--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "psr/http-message": "*"
+        "zendframework/zend-diactoros":"*"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
