--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,7 @@ tools:
     php_sim: true
     php_pdepend: true
     php_analyzer: true
+    external_code_coverage: true
     php_cs_fixer:
             config: { level: psr2 } # or psr1 if you would just like to get fixes for PSR1
     php_code_sniffer:
@@ -15,5 +16,13 @@ filter:
 build:
     environment:
         php:
-            version: 5.5
+            version: 5.6
+
+    tests:
+        override:
+            - phpunit # <- running with 5.6
+            - phpenv global 7.0.8 && phpenv rehash
+            - phpunit # <- running with 7.0
+
+
 
